# CS-100

CS100-Lab1-master/: test.cpp
CS100-Lab3-main/: person.cpp  personList.cpp
CS100-Lab4-main/: CMakeLists.txt  main1.cpp  rectangle.cpp  test.cpp
CS100-Lab5-master/: add.hpp  add_test.hpp  div.hpp  div_test.hpp  mult.hpp  mult_test.hpp  op.hpp  op_test.hpp  pow.hpp  pow_test.hpp  rand.hpp  sub.hpp  sub_test.hpp
CS100-Lab6-carel009/: main.cpp  select.hpp  spreadsheet.cpp  test.cpp  (+1 more)
final-project-icast065-carel009-ssmit129-jmuni017-master/: CMakeLists.txt  README.md  ally.hpp  armourSet.h  character.hpp  consumableInventory.h  consumables.h  enchantedArmourSet.h  epPotion.h  foe.cpp  foe.hpp  healthPotion.h  intro.txt  inventory.h  items.h  magicDefensePotion.h  magicPowerPotion.h  magicStaff.h  main.cpp  npc.hpp  physicalDefensePotion.h  player.hpp  speedPotion.h  story.cpp  story.hpp  strengthPotion.h  sword.h  weaponary.h
final-project-icast065-carel009-ssmit129-jmuni017-master/scenes/: Scene.cpp  Scene.hpp
final-project-icast065-carel009-ssmit129-jmuni017-master/scenes/Encounter/: Encounter.cpp  Encounter.hpp
final-project-icast065-carel009-ssmit129-jmuni017-master/scenes/Encounter/Combat/: Combat.cpp  Combat.hpp
final-project-icast065-carel009-ssmit129-jmuni017-master/spells/: KnightSpells.cpp  KnightSpells.hpp  Level1KnightSpells.cpp  Level1KnightSpells.hpp  Level1MageSpell.cpp  Level1MageSpell.hpp  Level1WarriorSpell.cpp  Level1WarriorSpell.hpp  MageSpells.cpp  MageSpells.hpp  PlayerSpells.cpp  PlayerSpells.hpp  SpellManager.cpp  SpellManager.hpp  Spells.cpp  Spells.hpp  WarriorSpells.cpp  WarriorSpells.hpp
final-project-icast065-carel009-ssmit129-jmuni017-master/uml/: v3.drawio
(+28 files in other folders)
